[package]
name = "lyzah"
version = "0.1.0"
authors = ["Frans Paasonen <franspaasonen@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib"]

[dependencies]
winit = "0.22.1"
crossbeam = "0.7.3"
sdl2 = "0.34.3"
