[package]
name = "lyzah"
version = "0.1.0"
authors = ["Frans Paasonen <franspaasonen@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib"]

[dependencies]
anyhow = "1.0.52"
bytemuck = { version = "1.7.3", features = ["derive"] }
cgmath = "0.18.0"
image = "0.23.14"
pollster = "0.2.4"
readonly = "0.2.0"
wgpu = "0.12.0"
winit = "0.26.1"

[build-dependencies]
anyhow = "1.0.52"
fs_extra = "1.2.0"
glob = "0.3.0"
